# SlicerAstro

./: .codedocs  .gitignore  2015-09-17-Scene.mrml  CMakeCache.txt  CMakeLists.txt  CTestConfig.cmake  LICENSE  README.md  SuperBuild.cmake
AstroLibs/: CMakeLists.txt
AstroLibs/AstroWidgets/: CMakeLists.txt  qMRMLAstroVolumeInfoWidget.cxx  qMRMLAstroWidgetsConfig.cmake.in  qMRMLAstroWidgetsConfigure.h.in
AstroLibs/MRMLAstro/: CMakeLists.txt  MRMLAstroConfig.cmake.in  vtkMRMLAstroLabelMapVolumeDisplayNode.cxx  vtkMRMLAstroLabelMapVolumeDisplayNode.h  vtkMRMLAstroLabelMapVolumeNode.h  vtkMRMLAstroSliceNode.h  vtkMRMLAstroVolumeDisplayNode.cxx  vtkMRMLAstroVolumeDisplayNode.h  vtkMRMLAstroVolumeNode.h  vtkMRMLAstroVolumeStorageNode.cxx  vtkMRMLAstroVolumeStorageNode.h  vtkMRMLConfigure.h.in
AstroLibs/vtkFits/: CMakeLists.txt  vtkFITSReader.cxx  vtkFITSReader.h  vtkFITSWriter.cxx  vtkFITSWriter.h  vtkFitsConfig.cmake.in  vtkFitsConfigure.h.in  vtkFitsWin32Header.h
AstroMomentMaps/Testing/: CMakeLists.txt  vtkMRMLAstroMomentMapsParametersNodeTest1.cxx
AstroMomentMaps/Testing/Python/: AstroMomentMapsSelfTest.py  CMakeLists.txt  CMakeLists.txt.save
AstroSampleData/: AstroSampleData.py  CMakeLists.txt
AstroSampleData/Testing/Python/: CMakeLists.txt  qSlicerAstroSampleDataModuleDownloadVolumeTest.py
AstroVolume/: CMakeLists.txt  qSlicerAstroVolumeIOOptionsWidget.cxx  qSlicerAstroVolumeIOOptionsWidget.h  qSlicerAstroVolumeLayoutSliceViewFactory.cxx  qSlicerAstroVolumeLayoutSliceViewFactory.h  qSlicerAstroVolumeModule.cxx  qSlicerAstroVolumeModule.h  qSlicerAstroVolumeModuleWidget.cxx  qSlicerAstroVolumeModuleWidget.cxx.autosave  qSlicerAstroVolumeModuleWidget.h  qSlicerAstroVolumeReader.cxx  qSlicerAstroVolumeReader.h
AstroVolume/Documentation/: AstroVolume.dox
AstroVolume/EditorEffects/: CMakeLists.txt  qSlicerSegmentEditorAstroCloudLassoEffect.cxx  qSlicerSegmentEditorAstroCloudLassoEffect.h  qSlicerSegmentEditorAstroCloudLassoEffect_p.h  qSlicerSegmentEditorAstroContoursEffect.cxx  qSlicerSegmentEditorAstroContoursEffect.h
AstroVolume/EditorEffects/Resources/: qSlicerAstroVolumeEditorEffects.qrc
AstroVolume/Logic/: CMakeLists.txt  vtkSlicerAstroVolumeLogic.cxx  vtkSlicerAstroVolumeLogic.h
AstroVolume/MRML/: CMakeLists.txt  MRMLAstroConfig.cmake.in  vtkMRMLAstroLabelMapVolumeDisplayNode.cxx  vtkMRMLAstroLabelMapVolumeDisplayNode.h  vtkMRMLAstroLabelMapVolumeNode.cxx  vtkMRMLAstroLabelMapVolumeNode.h  vtkMRMLAstroMaskingParametersNode.cxx  vtkMRMLAstroMaskingParametersNode.h  vtkMRMLAstroModelingParametersNode.cxx  vtkMRMLAstroModelingParametersNode.h  vtkMRMLAstroMomentMapsParametersNode.cxx  vtkMRMLAstroMomentMapsParametersNode.h  vtkMRMLAstroPVDiagramParametersNode.cxx  vtkMRMLAstroPVDiagramParametersNode.h  vtkMRMLAstroPVSliceParametersNode.cxx  vtkMRMLAstroPVSliceParametersNode.h  vtkMRMLAstroProfilesParametersNode.cxx  vtkMRMLAstroProfilesParametersNode.h  vtkMRMLAstroReprojectParametersNode.cxx  vtkMRMLAstroReprojectParametersNode.h  vtkMRMLAstroSliceNode.cxx  vtkMRMLAstroSliceNode.h  vtkMRMLAstroSmoothingParametersNode.cxx  vtkMRMLAstroSmoothingParametersNode.h  vtkMRMLAstroStatisticsParametersNode.cxx  vtkMRMLAstroStatisticsParametersNode.h  vtkMRMLAstroTwoDAxesDisplayableManager.cxx  vtkMRMLAstroTwoDAxesDisplayableManager.h  vtkMRMLAstroVolumeDisplayNode.cxx  vtkMRMLAstroVolumeDisplayNode.h  vtkMRMLAstroVolumeDisplayNode.h.save  vtkMRMLAstroVolumeNode.cxx  vtkMRMLAstroVolumeNode.h  vtkMRMLAstroVolumeStorageNode.cxx  vtkMRMLAstroVolumeStorageNode.h  vtkMRMLSmoothingParametersNode.cxx  vtkMRMLSmoothingParametersNode.h
AstroVolume/MRMLDM/: CMakeLists.txt  vtkMRMLAstroBeamDisplayableManager.cxx  vtkMRMLAstroBeamDisplayableManager.h  vtkMRMLAstroTwoDAxesDisplayableManager.cxx  vtkMRMLAstroTwoDAxesDisplayableManager.h
AstroVolume/Resources/: presets.xml  qSlicerAstroVolumeModule.qrc
AstroVolume/Resources/UI/: qSlicerAstroVolumeFooBarWidget.ui  qSlicerAstroVolumeIOOptionsWidget.ui  qSlicerAstroVolumeModuleWidget.ui
AstroVolume/Testing/: WEIN069.fits
AstroVolume/Testing/Cxx/: CMakeLists.txt  vtkSlicerAstroVolumeLogicTest1.cxx  (+3 more)
AstroVolume/Widgets/: .qSlicerScalarVolumeDisplayWidget.cxx.swp  CMakeLists.txt  qMRMLAstroVolumeInfoWidget.cxx  qMRMLAstroVolumeInfoWidget.h  qMRMLSliceAstroControllerWidget.cxx  qMRMLSliceAstroControllerWidget.h  qMRMLSliceAstroControllerWidget_p.h  qMRMLSliceAstroWidget.cxx  qMRMLSliceAstroWidget.h  qMRMLSliceAstroWidget_p.h  qSlicerAstroLabelMapVolumeDisplayWidget.cxx  qSlicerAstroLabelMapVolumeDisplayWidget.h  qSlicerAstroScalarVolumeDisplayWidget.cxx  qSlicerAstroScalarVolumeDisplayWidget.h  qSlicerAstroVolumeDisplayWidget.cxx  qSlicerAstroVolumeDisplayWidget.h  qSlicerAstroVolumeFooBarWidget.cxx  qSlicerAstroVolumeFooBarWidget.h  qSlicerAstroVolumeIOOptionsWidget.cxx  qSlicerAstroVolumeIOOptionsWidget.h  qSlicerAstroVolumeModuleWidget.cxx  qSlicerAstroVolumeModuleWidget.h  qSlicerLabelMapVolumeDisplayWidget.cxx  qSlicerLabelMapVolumeDisplayWidget.h  qSlicerScalarVolumeDisplayWidget.cxx  qSlicerScalarVolumeDisplayWidget.cxx.save  qSlicerScalarVolumeDisplayWidget.h
Libs/: CMakeLists.txt
Libs/vtkFits/: CMakeLists.txt  vtkFITSReader.cxx  vtkFITSReader.h  vtkFITSWriter.cxx  vtkFITSWriter.h
Smoothing/Logic/: CMakeLists.txt  vtkOpenGLAstroShaderComputation.cxx  vtkOpenGLAstroShaderComputation.h  vtkOpenGLAstroTextureImage.cxx  vtkOpenGLAstroTextureImage.h  vtkOpenGLShaderComputation.cxx  vtkOpenGLShaderComputation.h  vtkOpenGLTextureImage.cxx  vtkOpenGLTextureImage.h  vtkSlicerSmoothingLogic.cxx  vtkSlicerSmoothingLogic.h
vtkFits/: CMakeLists.txt  vtkFITSReader.cxx  vtkFITSReader.h  vtkFITSWriter.cxx  vtkFITSWriter.h  vtkFitsConfigure.h.in
vtkOpenGLFilters/: CMakeLists.txt  vtkAstroOpenGLImageAlgorithmHelper.cxx  vtkAstroOpenGLImageAlgorithmHelper.h  vtkAstroOpenGLImageBox.cxx  vtkAstroOpenGLImageBox.h  vtkAstroOpenGLImageGaussian.cxx  vtkAstroOpenGLImageGaussian.h  vtkAstroOpenGLImageGradient.cxx  vtkAstroOpenGLImageGradient.h  vtkOpenGLFiltersConfig.cmake.in  vtkOpenGLFiltersConfigure.h.in  vtkOpenGLFiltersWin32Header.h
(+199 files in other folders)
